--- a/FaleMais/Views/Home/Index.cshtml
+++ b/FaleMais/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron text-center">
     <h1>FaleMais</h1>
-    <p class="lead">Com o FaleMais você fala de graça com outras cidades pagamento muito menos. Uma ótima forma de manter o contato com pessoas distantes sem sofrer no bolso.</p>
+    <p class="lead">Com o FaleMais você fala de graça com outras cidades pagamento muito menos. Uma ótima forma de manter o contato com pessoas distantes, sem sofrer no bolso.</p>
 
     <a href="@Url.Action("index", "tarifa")" class="btn btn-lg btn-success">Calcule a economia</a>
 </div>
@@ -42,5 +42,3 @@
         </p>
     </div>
 </div>
-
-<hr />
