--- a/FaleMais/Views/Tarifa/_Resultado.cshtml
+++ b/FaleMais/Views/Tarifa/_Resultado.cshtml
@@ -1,15 +1,9 @@
-﻿<hr />
+﻿@model FaleMais.Models.Values.ResultadoFacade
 
-@if (ViewBag.FaleMaisValor == null)
-{
-    <div>
-        <h4>Nenhuma tarifa encontrada para os valores informados.</h4>
-        <p>Verifique se você informou corretamente todos os campos.</p>
-    </div>
-}
-else
-{
+<hr />
 
+@if (Model.Valido)
+{
     <div class="row text-center">
         <div class="col-xs-5">
             <div class="panel panel-success">
@@ -20,7 +14,7 @@ else
                     </h3>
                 </div>
                 <div class="panel-body">
-                    <h1>@ViewBag.FaleMaisValor.ToString("c")</h1>
+                    <h1>@(Model.TarifaNaoEncontrada ? "-" : Model.FaleMaisValor.ToString("c"))</h1>
                 </div>
             </div>
         </div>
@@ -33,10 +27,16 @@ else
                     </h3>
                 </div>
                 <div class="panel-body">
-                    <h1>@ViewBag.TarifaComumValor.ToString("c")</h1>
+                    <h1>@(Model.TarifaNaoEncontrada ? "-" : Model.TarifaComumValor.ToString("c"))</h1>
                 </div>
             </div>
 
         </div>
     </div>
+}
+else
+{
+    foreach (var erro in Model.Erros){
+        <div class="alert alert-warning">@erro.ErrorMessage</div>
+    }
 }
